MODEXPW-470 Fixed coverage